--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "nodemon ",
     "dev": "nodemon app"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "los capos del perico",
   "license": "ISC",
   "dependencies": {
