--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon ",
-    "dev": "nodemon app"
+    "dev": "nodemon src/app"
   },
   "engines": {
     "node": ">=14.20.1"
